--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <img src="IMG_4292のコピー.jpg" width="300px">
     <img src="IMG_4293のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_4294のコピー.jpg" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
