--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="IMG_4293のコピー.jpg" width="300px">
     <img src="IMG_4294のコピー.jpg" width="300px">
     <img src="IMG_4295のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_4296のコピー.jpg" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
