--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="IMG_4294のコピー.jpg" width="300px">
     <img src="IMG_4295のコピー.jpg" width="300px">
     <img src="IMG_4296のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_4297のコピー.jpg" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
