--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="IMG_4295のコピー.jpg" width="300px">
     <img src="IMG_4296のコピー.jpg" width="300px">
     <img src="IMG_4297のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_4298のコピー.jpg" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
   </body>
