--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <img src="IMG_4297のコピー.jpg" width="300px">
     <img src="IMG_4298のコピー.jpg" width="300px">
     <img src="IMG_4299のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_4300のコピー.jpg" width="300px">
   </body>
 </html>
